--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"express"	: "3.x"
 	,	"mongodb"	: "1.3.x"
 	,	"redis"		: "0.8.2"
-	,	"etcd"		: "https://github.com/innotech/node-etcd/tarball/master"
+	,	"node-etcd"	: "https://github.com/innotech/node-etcd/tarball/master"
 	,	"xtend"		: "1.0.x"
 	,	"amqp"		: "https://github.com/postwait/node-amqp/tarball/master"
 	,	"qlog-node"	: "https://github.com/bbva-innotech/qlog-node/tarball/master"
